--- a/resume2.html
+++ b/resume2.html
@@ -49,20 +49,20 @@
         <div class="container">
             <div class="row">
                 <div class="opener">
-                    <div class="col s6 offset-s3"><span class="flow-text bold"><h2>Mel DeJesus</h2></span></div>
-                    <div class="col s8 offset-s2"><span class="flow-text bold"><h5>meldejesus22@gmail.com</h5></span></div>
-                    <div class="col s6 offset-s3"><span class="flow-text bold"><h5>919-220-8424</h5></span></div>
+                    <div class="center-align"><span class="flow-text bold"><h2>Mel DeJesus</h2></span></div>
+                    <div class="center-align"><span class="flow-text bold"><h5>meldejesus22@gmail.com</h5></span></div>
+                    <div class="center-align"><span class="flow-text bold"><h5>919-220-8424</h5></span></div>
                 </div>
                 <br></br>
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Objective</h5></span></div>
-                <div class="col s12"><span class="flow-text"><p>To discuss, work on, and continue to learn about applications from a full-stack perspective
+                <div class="col s6"><span class="flow-text bold"><h5>Objective:</h5></span></div>
+                <div class="col s12"><span class="flow-text"><p>to be part of an Agile team working in a strong learning environment with a relevant tech stack. 
                     </p></span></div>
                 <br></br>
 
 
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Skills</h5></span></div>
+                <div class="col s6"class="u"><span class="flow-text bold"><h5>Skills</h5></span></div>
                 <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Front-End:</span> Bootstrap ° Materialize ° APIs
                     ° JavaScript / jQuery HTML/CSS ° React.JS ° Angular </p>
                     </span>
@@ -73,14 +73,50 @@
                 </div>
                 <br></br>
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Education</h5></span></div>
-                <div class="col s12"><span class="flow-text"><p>Full-stack Development, 2017 -- UNC Coding Bootcamp
+                <div class="col s6"><span class="flow-text bold"><h5>Education</h5></span></div>
+                <div class="col s12"><span class="flow-text"><p>Full-stack Development, 2017,  UNC Coding Bootcamp
                     </p></span></div>
-                <div class="col s12"><span class="flow-text"><p>Cultural Studies / Critical Theory & Analysis, M.A., 2002 -- East Carolina University
+                <div class="col s12"><span class="flow-text"><p>Cultural Studies / Critical Theory & Analysis, M.A., 2002, East Carolina University
                     </p></span></div>
                 <br></br>
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Experience
+                <div class="col s6 "class="u"><span class="flow-text bold"><h5>Tech Experience</h5></span></div>
+
+                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Full-stack Developer - BizOps Group, AT&T, Durham, NC, Oct 2017- present</span>
+
+                </p>
+                </span>
+            </div>
+            <div class="col s11 offset-s1"><span class="flow-text"><p>o	This 10-person agile team has as its primary focus a high-profile internal web-based client/resource management tool.   For each release, we enhance a range of functionalities that deal with both the tool's front-end (JavaScript/JQuery) and back-end (Perl, SQL, APIs).    </p></span></div> 
+            <br></br>
+            <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Affordable Housing, Code for America, Caktus Group, Durham NC - Aug 2017 - present</span>
+
+            </p>
+            </span>
+        </div>
+        <div class="col s11 offset-s1"><span class="flow-text"><p>o		This small group of volunteers explore how apps can help organize data and stories in a way that informs the community on the issues surrounding affordable housing.  (Django, PostgreSQL, D3)   </p></span></div> 
+        <br></br>
+
+             
+                <div class="col s6"class="u"><span class="flow-text bold"><h5>2017 Projects</h5></span></div>
+                <div class="col s12"><span class="flow-text"><p> <span style="font-weight: 400">Good Tunes (MongoDB, React, Node, Express, Passport.JS)</span>                    – allows users to rate, listen to, and organize music </p>
+                    </span>
+                </div>
+                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">NY Times API – (MySQL, React, Node, Express) 
+                </span>> – allows users to save topics searched for in the NY Times </p>
+                    </span>
+                </div>
+
+                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Roadie App (MySQL, jQuery, Bootstrap, Node/Express, AuthO) </span>                    – allows users to record past and future trips</p>
+                    </span>
+                </div>
+
+                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Books-Movies App (Firebase, jQuery, APIs, Bootstrap)</span>                    – offers book suggestions based on user’s movie interests </p>
+                    </span>
+                </div>
+                <br></br>
+
+                <div class="col s6"class="u"><span class="flow-text bold"><h5>Other Experience
                     </h5></span></div>
                 <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Instructor Durham Tech Community College, NC State, Center for Nature, Education, and the Imagination, 2002-2017</span>
 
@@ -100,36 +136,19 @@
                 </div>
                 <div class="col s11 offset-s1"><span class="flow-text  "><p>Evaluated operational goals, strategies, and budgets. Maintained a range of print and electronic documents.</p></span></div>
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>2017 Projects</h5></span></div>
-                <div class="col s12"><span class="flow-text"><p> <span style="font-weight: 400">Good Tunes (MongoDB, React, Node, Express, Passport.JS)</span>                    – allows users to rate, listen to, and organize music </p>
-                    </span>
-                </div>
-                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">NY Times API – (MySQL, React, Node, Express) 
-                </span>> – allows users to save topics searched for in the NY Times </p>
-                    </span>
-                </div>
 
-                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Roadie App (MySQL, jQuery, Bootstrap, Node/Express, AuthO) </span>                    – allows users to record past and future trips</p>
-                    </span>
-                </div>
-
-                <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">Books-Movies App (Firebase, jQuery, APIs, Bootstrap)</span>                    – offers book suggestions based on user’s movie interests </p>
-                    </span>
-                </div>
-                <br></br>
-
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Co-Research</h5></span></div>
+                <div  class="col s6 "class="u"><span class="flow-text bold"><h5>Co-Research</h5></span></div>
                 <div class="col s12"><span class="flow-text"><p><span style="font-weight: 400">PRESS study, Durham Tech Community College 2014 - 2016</span>
                     </p>
                     </span>
                 </div>
-                <div class="col s12"><span class="flow-text"><p>In this two-year study, we analyzed the course completion and grade distribution data for our courses; considered issues of equity and course policies; implemented multiple strategies to help our classes be more successful; revised those strategies based on lessons learned from data; presented findings to staff and faculty.
+                <div class="col s12"><span class="flow-text"><p>In this two-year study, we analyzed the course completion and grade distribution data for our courses; considered issues of equity and course policies; implemented multiple strategies to help our classes be more successful; revised those strategies based on lessons learned from data; presented findings to staff and faculty. 
                             </p></span></div>
                 <br></br>
 
-                <div class="col s6 offset-s3"><span class="flow-text bold"><h5>Personal Interests</h5></span></div>
+                <div  class="col s6"><span class="flow-text bold"class="u"><h5>Personal Interests</h5></span></div>
 
-                <div class="col s12"><span class="flow-text"><p>Music Theory, Speculative Writing, Yoga, Natural History
+                <div class="col s12"><span class="flow-text"><p>Being outdoors, playing musical instruments, exploring speculative fiction
                                     
                                 </p></span></div>
                 <br></br>
